<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    <variable
        name="viewModel"
        type="com.example.profile.viewModel.EditProfileViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:elevation="0dp"
                android:gravity="center"
                android:theme="@style/Theme.MaterialComponents.Light"
                android:textAlignment="center"
                app:buttonGravity="center_vertical"
                app:navigationIcon="@drawable/ic_back"
                app:title="My Profile"
                app:titleCentered="true"
                app:titleTextAppearance="@style/ActionBar"
                app:titleTextColor="@color/black" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:background="@color/white"
            android:fillViewport="false"
            tools:context=".fragments.EditProfileFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:clipChildren="false"
                android:layout_marginTop="8dp">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_pic"
                    app:civ_border_color="@color/black"
                    app:civ_border_width="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/add_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="55dp"
                    android:background="@drawable/ic_ellipse"
                    android:padding="8dp"
                    android:src="@drawable/ic_camera"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/imageView" />

                <TextView
                    android:id="@+id/textView3"
                    style="@style/MediumBlack14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="55dp"
                    android:text="@string/str_farmer_name"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <EditText
                    android:id="@+id/tv_name"
                    style="@style/SemiBold"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/text_border"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:inputType="textPersonName"
                    tools:text="Krishna AgriFarm"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <TextView
                    android:id="@+id/textView4"
                    style="@style/Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/str_mobile_number"
                    android:textColor="@color/lightBlack"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                <EditText
                    android:id="@+id/tv_phone_no"
                    style="@style/SemiBold"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/text_border_gray"
                    android:drawablePadding="4dp"
                    android:enabled="false"
                    android:paddingStart="16dp"
                    android:drawableStart="@drawable/ic_flag"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/str_address_line_1"
                    android:textColor="@color/lightBlack"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_phone_no" />

                <LinearLayout
                    android:id="@+id/ll_address1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/text_border"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5">

                    <EditText
                        android:id="@+id/tv_address1"
                        style="@style/SemiBold"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"
                        android:layout_weight="1"
                        android:maxLines="2"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/transparent"
                        android:drawablePadding="8dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@{viewModel.response3.address.toString()}"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/img_autoText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_profile_location"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="8dp"/>
                </LinearLayout>


                <TextView
                    android:id="@+id/textView6"
                    style="@style/Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/address_line_2"
                    android:textColor="@color/lightBlack"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ll_address1" />

                <EditText
                    android:id="@+id/tv_address2"
                    style="@style/SemiBold"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/text_border"
                    android:drawablePadding="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@{viewModel.response3.village}"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textView7"
                    style="@style/Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/str_city"
                    android:textColor="@color/lightBlack"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_address2" />

                <EditText
                    android:id="@+id/tv_city"
                    style="@style/SemiBold"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/text_border"
                    android:drawablePadding="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@{viewModel.response3.district.toString()}"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <TextView
                    android:id="@+id/textView8"
                    style="@style/Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/str_state"
                    android:textColor="@color/lightBlack"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_city" />

                <EditText
                    android:id="@+id/tv_state"
                    style="@style/SemiBold"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/text_border"
                    android:drawablePadding="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@{viewModel.response3.state.toString()}"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <TextView
                    android:id="@+id/textView9"
                    style="@style/Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/str_pincode"
                    android:textColor="@color/lightBlack"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_state" />

                <EditText
                    android:id="@+id/tv_pincode"
                    style="@style/SemiBold"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/text_border"
                    android:drawablePadding="8dp"
                    android:inputType="number"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@{viewModel.response3.pincode}"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <FrameLayout
            android:id="@+id/frameLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:strokeColor="@color/LightGray"
                app:strokeWidth="1dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_margin="16dp"
                    android:backgroundTint="@color/DarkGreen"
                    android:text="@string/submit"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:clickable="true"
                    android:theme="@style/button"
                    app:cornerRadius="8dp"
                    android:focusable="true" />
            </com.google.android.material.card.MaterialCardView>
        </FrameLayout>
    </LinearLayout>
</layout>